styles/globals.css
/* ... */
.custom-navbar-top-links-accent {
    font-size: 16px;
    color: var(--btn_bg_color);
    opacity: 70%;
}

.custom-navbar-top-links a {
    padding-left: 10px;
}

.custom-navbar-top-links img {
    color: #20c997;
    width: 20px;
    height: 20px;
}

.custom-navbar-top-links-accent a {
    padding-left: 10px;
}

.custom-navbar-top-links-accent img {
    color: #20c997;
    width: 20px;
    height: 20px;
}

.custom-navbar-top-right-links {
    float: right;
}

.home-screen {
    height: 100%;
    width: 100%;
    background: #162332;
    padding-bottom: 100px;
    /*opacity: 0.95;*/
}

.custom-home-screen {
    padding-top: 100px;

}

.custom-nav-search-bar .custom-nav-search {
    margin-left: 10px;
    margin-top: 15px;
    width: 250px;
    border-radius: 20px 20px;
    padding: 8px 8px 8px 30px;
    background: #323D4A;

}

.custom-related-tracks-item-play {
    margin-left: 30px;
}

.custom-music-detail-comment-section .custom-nav-search {
    margin-left: 10px;
    margin-top: 15px;
    width: 100%;
    border-radius: 20px 20px;
    padding: 8px 8px 8px 30px;
    background: #323D4A;
    color: #ffffff;
}

.custom-music-detail-comment-list {
    color: #ffffff;
}

.custom-music-detail-comment-list .comment-text {
    color: #ffffff;
    opacity: 0.5;
}

.custom-nav-search-bar input {
    color: var(--white);
    font-size: 14px;
}

.custom-upload-btn {
    background: var(--bg_color_primary_dark);
    box-shadow: 0 0 2pt 1pt var(--btn_bg_color);
    color: var(--btn_bg_color);
    border-radius: 10px;
    text-align: center;
}

.custom-rounded-circle {
    width: 60px;
    height: 60px;
}

.custom-home-screen {
    color: var(--white);
}

.progress-bar {
    background-color: transparent;
}

.react-jinke-music-player-main .music-player-panel .panel-content .img-content {
    width: 50px;
    height: 50px;
    border-radius: 50%;
    overflow: hidden;
    background-size: 0%;
    background-repeat: no-repeat;
    box-shadow: 0 0 10px rgba(0, 34, 77, .05);
    cursor: pointer
}

.custom-home-headers h3 {
    text-align: left;
    font: bold 30px/93px Metropolis;
    letter-spacing: 0px;
    color: #FFFFFFE6;
    text-transform: capitalize;
    opacity: 1;
    margin-left: 70px;
}

.custom-home-music-display {
    width: 200px;
    height: 200px;
    margin-top: 20px;
    /*margin-left: 70px;*/
}

.custom-music-detail-img {
    width: 200px;
    height: 200px;
}

.custom-music-detail-img img {
    width: 100%;
    height: 100%;
    margin-left: 30px;
    margin-top: 25px;
    margin-bottom: 25px;
}

.custom-home-music-display img {
    width: 170px;
    height: 170px;
    border-radius: 12px;
    box-shadow: var(--card_boc_shadow);
}

.custom-home-music-display .custom-home-music-text {
    font-size: 12px;
    color: var(--white);
    margin-top: 12px;
    margin-left: 5px;
}

.custom-home-left-section .col-md-4 {
    flex: 0 0 8%;
}

.custom-home-left-section {
    margin-left: 55px;
}

.custom-row-setting {
    margin: 0;
}

.custom-col-settings {
    padding: 0 0 0 0;
    /*width:300px*/
}

.custom-col-md-12-settings {
    padding: 0 0 0 0;
}

.custom-home-right-section-wrapper {
    background: #0E1A2B;
    border-radius: 6px;
    opacity: 1;
    position: relative;
    margin-top: 5%;
    right: 80px;
    font-size: 12px;
}

.home-right-menu-likes {

}

.home-right-menu-likes-heading .span-heading-likes {
    font-size: 20px;
    margin-left: 24px;
    font-weight: bold;
}

.home-right-menu-likes-heading .custom-likes-view-all {
    text-align: end;
    margin-left: 100px;
    color: #00DAC8;
    font-size: 14px;
    font-weight: lighter;
}

.home-right-menu-likes-content {
    margin-top: 24px;
    margin-left: 54px;
}

.home-right-menu-who-to-follow-content {
    margin-top: 24px;
    margin-left: 14px;
}

.home-right-menu-who-to-follow-content {
    margin-top: 24px;
    margin-left: 54px;
}

.home-right-menu-likes-content img {
    width: 50px;
    height: 50px;
}

.home-right-menu-who-to-follow-content img {
    width: 50px;
    height: 50px;
}

.home-right-menu-who-to-follow-heading {
    font-size: 20px;
    margin-left: 10px;
    font-weight: bold;
}

.home-right-menu-tags-heading {
    margin-top: 24px;
    font-size: 20px;
    margin-left: 24px;
    font-weight: bold;

}

.home-right-menu-tags-content {
    margin-left: 14px;
    margin-top: 24px;
}

.pointer-cursor {
    cursor: pointer;
}

.home-right-menu-tags-content-pill {
    background: #0E1A2B;
    box-shadow: 0 0 2pt 1pt var(--btn_bg_color);
    color: var(--btn_bg_color);
    border-radius: 10px;
}

/*Horizontal scroll menu CSS*/
.menu-item {
    padding: 0 40px;
    margin: 5px 10px;
    user-select: none;
    cursor: pointer;
    border: none;
}

.scroll-menu-arrow {
    padding: 20px;
    cursor: pointer;
}

.custom-horizontal-menu {
    width: 90%;
}

.custom-menu-wrapper {
    width: 90%;


}

.custom-menu-wrapper-inner {
    margin-right: 100px;
}

.scroll-menu-arrow {
    padding: 15px;
}

.menu-item-wrapper .active {
    border: 0;
    outline: none;
    border: none;
}

.menu-item-wrapper .active {
    border: none;
}

.menu-item.active {
    border: none;
}

.menu-item-wrapper:active {
    border: none;
    display: inline-block;
}

.custom-wrapper {
    border: 0;
    outline: none;
    border: none;
}

.custom-menu-style {
    align-items: start;
}

.custom-menu-inner-wrapper-style {
    transform: translate3d(10px, 0, 0);
    text-align: left;
}

/*.menu-wrapper--inner{*/
/*    transform: tr;*/
/*}*/
/*Horizontal scroll menu CSS*/
.custom-music-detail-page {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    padding-top: 60px;
    padding-bottom: 100px;
    background: #162332;
}

.custom-user-detail-page {
    width: 100%;
    height: 100%;
    min-height: 100vh;
    padding-top: 60px;
    padding-bottom: 100px;
    background: #162332;
}
/* ... */

